Closed
Bug 1429426
Opened 7 years ago
Closed 7 years ago
Crash in nsNSSSocketInfo::SetNPNList
Categories
(Core :: Networking: HTTP, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | --- | fixed |
People
(Reporter: marcia, Assigned: dragana)
References
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
|
1.17 KB,
patch
|
valentin
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-bea969d6-d6d4-4698-8cbb-bf1900180103.
=============================================================
Seen while looking at crash stats - crashes started using 20171222100407: http://bit.ly/2CWXbvk. Although low volume, there are still users hitting it up in builds from the last few days. TFO was turned on 12/21 so I am not sure if that comes into play or not in this crash.
Top 10 frames of crashing thread:
0 xul.dll nsNSSSocketInfo::SetNPNList security/manager/ssl/nsNSSIOLayer.cpp:618
1 xul.dll mozilla::net::nsHttpConnection::SetupNPNList netwerk/protocol/http/nsHttpConnection.cpp:811
2 xul.dll mozilla::net::nsHttpConnection::InitSSLParams netwerk/protocol/http/nsHttpConnection.cpp:940
3 xul.dll mozilla::net::nsHttpConnection::SetupSSL netwerk/protocol/http/nsHttpConnection.cpp:769
4 xul.dll mozilla::net::nsHttpConnection::Activate netwerk/protocol/http/nsHttpConnection.cpp:685
5 xul.dll mozilla::net::nsHttpConnectionMgr::DispatchAbstractTransaction netwerk/protocol/http/nsHttpConnectionMgr.cpp:1771
6 xul.dll mozilla::net::nsHttpConnectionMgr::nsHalfOpenSocket::SetupConn netwerk/protocol/http/nsHttpConnectionMgr.cpp:4773
7 xul.dll mozilla::net::nsHttpConnectionMgr::nsHalfOpenSocket::StartFastOpen netwerk/protocol/http/nsHttpConnectionMgr.cpp:4429
8 xul.dll mozilla::net::nsSocketTransport::InitiateSocket netwerk/base/nsSocketTransport2.cpp:1540
9 xul.dll mozilla::net::nsSocketTransport::OnSocketEvent netwerk/base/nsSocketTransport2.cpp:2096
=============================================================
| Reporter | ||
Comment 2•7 years ago
|
||
It looks as if reports such as https://crash-stats.mozilla.com/report/index/d5a7bc88-fc7d-42c3-8e3c-920720171227 have this stack as well.
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Flags: needinfo?(dd.mozilla)
Priority: -- → P1
Whiteboard: [necko-triaged]
| Assignee | ||
Comment 3•7 years ago
|
||
In bug 1422895 I removed check:
if (GetModuleHandleW(L"pmls64.dll") || GetModuleHandleW(L"rlls64.dll")) {
mFastOpenSupported = false;
}
I thought that such crashes were a side effect of another bug and they accidentally have these dll in it.
Obviously they are not, I will add the check again.
| Assignee | ||
Comment 4•7 years ago
|
||
Attachment #8941795 -
Flags: review?(valentin.gosu)
Updated•7 years ago
|
Attachment #8941795 -
Flags: review?(valentin.gosu) → review+
Pushed by dd.mozilla@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e5fb2e369165
Disable TFO if pmls64.dll and rlls64.dll are detected. r=valentin
| Reporter | ||
Updated•7 years ago
|
Crash Signature: [@ nsNSSSocketInfo::SetNPNList] → [@ nsNSSSocketInfo::SetNPNList]
[@ SSL_SetNextProtoNego | rlls64.dll@0x72bf5]
[@ SSL_SetNextProtoNego | pmls64.dll@0x72bf5]
[@ SSL_SetNextProtoNego | pmls64.dll@0x74381]
[@ @0x0 | SSL_SetNextProtoNego | pmls64.dll@0x74381]
[@ SSL_SetNextProtoNego | p…
Comment 7•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Updated•7 years ago
|
status-firefox57:
--- → unaffected
status-firefox58:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•