Bug 1429426 - Disable TFO if pmls64.dll and rlls64.dll are detected. r=valentin